add new interface DatabaseChecker
Co-authored-by: Oliver Kopp <kopp.dev@gmail.com>